--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Ex5ab)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Ex5ab Test.cpp sources/MagicalContainer.cpp sources/MagicalContainer.hpp Test.cpp Demo.cpp)
+add_executable(Ex5ab Test.cpp sources/MagicalContainer.cpp sources/MagicalContainer.hpp Test.cpp Demo.cpp myDemo.cpp)
 
